web_gib:art::persevere: "Improved" info/help layout issues.
* Still does not quite work.
  * Mobile was good, but problems on desktop.

issue: relates to #15, #29

--- a/ib_gib_umb/apps/web_gib/web/static/css/app.scss
+++ b/ib_gib_umb/apps/web_gib/web/static/css/app.scss
@@ -172,13 +172,13 @@
 /* Tag overrides */
 /*---------------------------------------------------------------------------*/
 
-html {
-  height: 98% !important;
-}
-
-main {
-  height: 98%;
-}
+// html {
+//   height: 98% !important;
+// }
+//
+// main {
+//   height: 98%;
+// }
 
 body {
   margin-top: 5px !important;
